Bear in Mind Translations 0.0.1 library added